# vexy-mkdocs-tools

./: .gitignore  CHANGELOG.md  README.md  build.sh  publish.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/vexy_mkdocs_tools/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
