# this_file: pyproject.toml

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vexy-mkdocs-tools"
dynamic = ["version"]
description = "Fire-based CLI that bundles ProperDocs + MaterialX + the vexy mkdocs plugin set, for one-shot site builds via `uvx vexy-mkdocs-tools build`."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Adam Twardoch", email = "adam+github@twardoch.com" },
]
keywords = ["mkdocs", "properdocs", "materialx", "static-site", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: MkDocs",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "fire>=0.7",
    "loguru>=0.7",
    "properdocs>=1.6.7",
    "mkdocs-materialx>=10.1.4",
    "pymdown-extensions>=10.2",
    "mkdocs-awesome-nav>=3.3",
    "mkdocs-include-markdown-plugin>=7.2",
    "mkdocs-llmstxt>=0.2",
    "mkdocs-copy-to-llm>=0.2",
    "mkdocs-rss-plugin>=1.17",
]

[project.optional-dependencies]
flowmark = [
    "flowmark>=0.6.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/vexyart/vexy-mkdocs-tools"
Repository = "https://github.com/vexyart/vexy-mkdocs-tools"
Issues = "https://github.com/vexyart/vexy-mkdocs-tools/issues"
Changelog = "https://github.com/vexyart/vexy-mkdocs-tools/blob/main/CHANGELOG.md"

[project.scripts]
vexy-mkdocs-tools = "vexy_mkdocs_tools.cli:main"
vmt = "vexy_mkdocs_tools.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/vexy_mkdocs_tools/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vexy_mkdocs_tools"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
